changed spec to fit rules
