# gamification-impl/src/main/resources/api-spec.yaml
@@ -282,19 +282,34 @@ components:
       properties:
         id:
           type: string
-        badges:
+        badgesAwards:
           type: array
           items:
-            $ref: '#/components/schemas/Badge'
-        points:
+            $ref: '#/components/schemas/BadgeAward'
+        pointsAwards:
           type: array
           items:
-            type: object
-            properties:
-              pointScale:
-                $ref: '#/components/schemas/PointScale'
-              amount:
-                type: integer
+            $ref: '#/components/schemas/PointscaleAward'
+    Award:
+      type: object
+      properties:
+        reason:
+          type: string
+        timestamp:
+          type: string
+          format: date-time
+        path:
+          type: string
+          format: uri
+    BadgeAward:
+      allOf:
+        - $ref: '#/components/schemas/Award'
+    PointscaleAward:
+      allOf:
+        - $ref: '#/components/schemas/Award'
+      properties:
+        amount:
+          type: integer
     ApiKey:
       type: object
       properties:
